# BitTorrentClientAndTracker

./: .gitignore  Cargo.toml  README.md
Client/: README.md
Client/src/: download_manager.rs  lib.rs  listener.rs  tracker.rs  upload_manager.rs
Client/tests/: peer_mock.rs
Tracker/: Cargo.toml  README.md
Tracker/src/: announce_utils.rs  app.rs  bencoder.rs  constants.rs  controller.rs  data_manager.rs  lib.rs  listener.rs  logger.rs  main.rs  peer.rs  thread_pool.rs  torrent.rs  tracker.rs
Tracker/src/data/: tracker_data.json
Tracker/src/errors/: announce_error.rs  app_error.rs  data_manager_error.rs  listener_error.rs  mod.rs  torrent_error.rs  tracker_error.rs
Tracker/src/pages/: not_found.html  stats.html  stats.js
Tracker/src/reports/: logs.txt
Tracker/src/test_files/data_manager_test_files/: test_data.json
Tracker/tests/: data_manager_mock.rs  integration_announce_tests.rs  listener_mock.rs
Tracker/tests/data/: test_receive_tracker_response.json  tracker_data_test.json  tracker_data_test2.json  tracker_data_test3.json
Tracker/tests/reports/: log_test.txt
src/: app.rs  appservidor.rs  args.rs  bdecoder.rs  bencoder.rs  client.rs  communication_method.rs  config.txt  config.yml  config_parser.rs  constants.rs  download_manager.rs  lib.rs  listener.rs  logger.rs  main.rs  parser.rs  peer.rs  peer_connection.rs  test_helper.rs  threadpool.rs  torrent_parser.rs  torrentparser.rs  tracker.rs  ui_codes.rs  upload_manager.rs  utils.rs
src/ui/: mod.rs
statistics/: index.html  styles.css
tests/: client_mock.rs  integration_tests.rs  peer_mock.rs
(+839 files in other folders)
