[package]
name = "tracker"
version = "0.1.0"
edition = "2021"
default-run = "main"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0.100", features = ["derive"] }
serde_json = "1.0.40"
chrono = "0.4.19"
sha1 = "0.10.1"

[dependencies.serde_with]
version = "2.0.0" 

[lib]
name = "tracker"
path = "src/lib.rs"

[[bin]]
name = "main"
path = "src/main.rs"